WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281493
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-justify-content-vert-003.xhtml
https://bugs.webkit.org/show_bug.cgi?id=281493
Summary
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-justify-con...
alan
Reported
2024-10-15 07:46:07 PDT
ssia
Attachments
[fast-cq]Patch
(1.69 KB, patch)
2024-10-15 07:48 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-10-15 07:48:15 PDT
Created
attachment 472936
[details]
[fast-cq]Patch
EWS
Comment 2
2024-10-15 11:45:36 PDT
Committed
285212@main
(e8bc726e4a25): <
https://commits.webkit.org/285212@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472936
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-10-15 11:49:35 PDT
<
rdar://problem/137978656
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug