[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-justify-content-vert-003.xhtml https://bugs.webkit.org/show_bug.cgi?id=281493

Reviewed by Antti Koivisto.

"If the property's axis is not parallel with either left<->right axis, this value behaves as start"

https://drafts.csswg.org/css-align/#positional-values

* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp:
(WebCore::Layout::FlexLayout::handleMainAxisAlignment const):

Canonical link: https://commits.webkit.org/285212@main